cmake_minimum_required(VERSION 3.13)
project(ssl_test)
find_package(OpenSSL REQUIRED)
add_definitions("-L/usr/lib -lssl -lcrypto")
add_library(ssl_lib ssl_lib.c)
add_library(connection connection.c)
add_executable(server server.c)
#add_executable(client client.c)
target_link_libraries(server ssl_lib connection OpenSSL::SSL)
