cmake_minimum_required(VERSION 3.13)
project(ssl_test)
add_definitions("-g -L/usr/lib -lssl -lcrypto")
find_package(OpenSSL REQUIRED)
add_library(ssl_lib ssl_lib.c)
add_library(connection connection.c)
add_executable(server server.c)
add_executable(client client.c)
target_link_libraries(server ssl_lib connection OpenSSL::SSL)
target_link_libraries(client ssl_lib connection OpenSSL::SSL)
